@@ -391,6 +391,11 @@
       by \code{library(pkgname, lib.loc = "somewhere")} without being on
       the library search path (unless it is already installed in
       \code{.Library}, when it always will be).
+
+      \item \command{R CMD check --as-cran} notes \sQuote{hidden} files
+      and directories (with names starting with a dot) that are not
+      needed for the operation of \command{R CMD INSTALL} or \code{R CMD
+	build}: such files should be excluded from the published tarball.
       
       \item When \code{R CMD Rd2pdf} is used with \file{inputenx.sty},
       it allows further characters (mainly for Eastern European
@@ -406,6 +411,8 @@
 
       \item Use of \code{tapply()} with a 0-length \code{INDEX} list is
       deprecated with a warning.
+
+      \item \samp{Translation} packages are defunct.
     }
   }
 
@@ -560,6 +567,8 @@
       \code{?getCConverterDescriptions}) are deprecated: use the
       \code{.Call()} interface instead.  There are no known examples
       (they were never fully documented).
+      
+      \item \samp{Translation} packages are deprecated.      
     }
   }
 
